--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ html {
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
-  padding: 0;
+  padding: 4.8rem 0 0 0;
   color: #344563;
   background-color: #f4f5f7;
 }
@@ -74,12 +74,14 @@ a.button:active {
 
 .main-navigation {
   display: flex;
-  justify-content: space-between;
   height: 4.8rem;
   align-items: center;
   padding: 0 3.2rem 0 2.4rem;
   background-color: #fff;
-  padding-top: 20px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 .logo-placeholder img {
@@ -150,14 +152,25 @@ a.button:active {
   color: #6070ff;
 }
 
-.desktop-nav {
-  display: none;
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-grow: 1;
+}
+
+.burguer-menu button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
 }
 
 .hero {
   background-image: url(../img/background_hero.png);
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat center center fixed;
   background-color: #fff;
   padding: 0 2.4rem;
   border-bottom-left-radius: 8rem;
@@ -278,7 +291,7 @@ ul.project-details li::before {
 }
 
 ul.project-details li:first-child::before {
-  content: "";
+  content: '';
   margin: 0;
 }
 
@@ -393,7 +406,7 @@ span.tag {
 }
 
 .expertise ul.expertise-categories > li h2::after {
-  content: "";
+  content: '';
   background-image: url(../img/icons/chevron-icon.svg);
   display: block;
   width: 2.4rem;
@@ -502,30 +515,31 @@ span.tag {
   .main-navigation {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     height: 70px;
     padding-left: 15.5rem;
     padding-right: 14.3rem;
   }
 
-  .main-navigation a {
-    text-decoration-line: none;
-  }
-
-  .desktop-nav a {
+  .nav-links a {
     color: #344563;
   }
 
-  .desktop-nav li a {
+  .nav-links li {
+    margin-bottom: 0;
+  }
+
+  .nav-links li a {
     position: relative;
     overflow: hidden;
     text-decoration: none;
     color: black;
     font-size: 1.6rem;
+    font-weight: 400;
   }
 
-  .desktop-nav li a::before {
-    content: "";
+  .nav-links li a::before {
+    content: '';
     position: absolute;
     width: 100%;
     height: 2px;
@@ -537,7 +551,7 @@ span.tag {
     transition: all 0.3s ease-in-out 0s;
   }
 
-  .desktop-nav li a:hover::before {
+  .nav-links li a:hover::before {
     visibility: visible;
     transform: scaleX(1);
   }
@@ -601,15 +615,15 @@ span.tag {
     display: flex;
   }
 
-  .desktop-nav li:first-child {
+  .nav-links li:first-child {
     padding: 1rem 1.2rem;
   }
 
-  .desktop-nav li:nth-child(2) {
+  .nav-links li:nth-child(2) {
     padding: 1rem 1.2rem;
   }
 
-  .desktop-nav li:last-child {
+  .nav-links li:last-child {
     padding: 1rem 1.2rem;
   }
 
@@ -710,11 +724,11 @@ span.tag {
     border-color: #2230d2;
   }
 
-  .desktop-nav {
+  .nav-links {
     display: flex;
   }
 
-  .desktop-nav ul {
+  .nav-links ul {
     display: flex;
     flex-direction: row;
   }
