--- a/style.css
+++ b/style.css
@@ -247,14 +247,7 @@ ul {
 }
 
 .last-meet img {
-  width: 70%;
-  display: block;
-  margin: 0 auto;
-  filter: brightness(100%) saturate(1000%) hue-rotate(90deg);
-}
-
-.last-meet img:nth-child(1) {
-  margin-bottom: 2rem;
+  width: 100%;
 }
 
 .about-container-img {
@@ -265,16 +258,20 @@ ul {
 
 .image-container {
   position: relative;
+  margin-bottom: 2rem;
 }
 
 .text-overlay {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
   color: white;
-  padding: 10px;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: grid;
+  place-items: center;
+  text-align: center;
+  background-color: rgb(145 78 78 / 50%);
 }
 
 .text-overlay span {
