--- a/css/style.css
+++ b/css/style.css
@@ -381,9 +381,13 @@ h2.salmon-underline:after {
 .main-partners {
   background-color: #7a7a7a;
   height: 30vh;
-  padding-top: 2rem;
+
   color: #fff;
   max-width: 1440px;
+}
+
+.main-partners .sp {
+  gap: 0.7rem;
 }
 .cardRow {
   display: flex;
