Img bg compress

--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ h2.salmon-underline:after {
 }
 
 .main-schedule {
-  background-image: url(../img/main-schedule-bg.png);
+  background-image: url(../img/main-schedule-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   color: var(--grey);
