--- a/css/styles.css
+++ b/css/styles.css
@@ -77,11 +77,11 @@ a.button:active {
   height: 4.8rem;
   align-items: center;
   padding: 0 3.2rem 0 2.4rem;
-  background-color: #fff;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1;
+  background-color: #6070ff;
 }
 
 .logo-placeholder img {
@@ -142,6 +142,10 @@ a.button:active {
   font-weight: 600;
   font-size: 3.2rem;
   line-height: 4.4rem;
+}
+
+.nav-links ul li a {
+  color: #f5f5f5;
 }
 
 .main-navigation .logo-placeholder a {
@@ -677,6 +681,7 @@ span.tag {
   }
 
   .hero {
+    background: linear-gradient(to bottom, #007bff, #fff);
     background-image: url(../img/background_hero_desktop.png);
     background-size: cover;
     background-position: center;
